--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 
         <ul>
 
-          <li>Enter your JavaScript note here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Alt+Shift+F is formating the code in VS.</li>
 
         </ul>
 
